# Thunder-Generation

./: .gitignore  CMakeLists.txt  README.md  ReadME.txt
Evaluation/: AnalysisWaveform.py  AudioFeatures.py  AudioGeneration.py  HardwareResults.py  Pitch Distrubution.py  SurveyResults.py  acr-test-20240820153103060340-1.json
Source/: CMakeLists.txt  ParamIds.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSPTools/: CMakeLists.txt
Source/DSPTools/AudioEffects/: AudioEffects.cpp  AudioEffects.h  CMakeLists.txt
Source/DSPTools/Filter's/: CMakeLists.txt  LowPassFilter.cpp  LowPassFilter.h
Source/DSPTools/OtherTools/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Ramp.cpp  Ramp.h
Source/LookAndFeel/: CMakeLists.txt
Source/LookAndFeel/Components/: CMakeLists.txt  ContentComponent.cpp  ContentComponent.h  EffectsComponent.cpp  EffectsComponent.h  ShapeComponent.cpp  ShapeComponent.h  ThunderComponent.cpp  ThunderComponent.h
Source/LookAndFeel/GUICustom/: CMakeLists.txt  SliderDetails.cpp  SliderDetails.h  SliderLAF.cpp  SliderLAF.h  buttonDetails.cpp  buttonDetails.h  buttonLAF.cpp  buttonLAF.h
Source/SubModules/: CMakeLists.txt  Strike.cpp  Strike.h
